--- a/toy_pmjoshua_en_bn.yaml
+++ b/toy_pmjoshua_en_bn.yaml
@@ -1,25 +1,25 @@
 # toy_pmjoshua_en_bn.yaml
 
 ## Where the samples will be written
-save_data: joshua_enbn/run/example
+save_data: toy-pmjoshua-enbn/run/example
 ## Where the vocab(s) will be written
-src_vocab: joshua_enbn/run/example.vocab.src
-tgt_vocab: toy-enbn/run/example.vocab.tgt
+src_vocab: toy-pmjoshua-enbn/run/example.vocab.src
+tgt_vocab: toy-pmjoshua-enbn/run/example.vocab.tgt
 # Prevent overwriting existing files in the folder
 overwrite: False
 
 # Corpus opts:
 data:
     corpus_1:
-        path_src: joshua_enbn/train_pmjoshua_NMT.bn
-        path_tgt: joshua_enbn/train_pmjoshua_NMT.en
+        path_src: toy-pmjoshua-enbn/train_pmjoshua_NMT.bn
+        path_tgt: toy-pmjoshua-enbn/train_pmjoshua_NMT.en
     valid:
-        path_src: joshua_enbn/dev_pmjoshua_NMT.bn
-        path_tgt: joshua_enbn/dev_pmjoshua_NMT.en
+        path_src: toy-pmjoshua-enbn/dev_pmjoshua_NMT.bn
+        path_tgt: toy-pmjoshua-enbn/dev_pmjoshua_NMT.en
 
 # Vocabulary files that were just created
-src_vocab: joshua_enbn/run/example.vocab.src
-tgt_vocab: joshua_enbn/run/example.vocab.tgt
+src_vocab: toy-pmjoshua-enbn/run/example.vocab.src
+tgt_vocab: toy-pmjoshua-enbn/run/example.vocab.tgt
 
 # Train on a single GPU
 world_size: 1
@@ -27,7 +27,7 @@ gpu_ranks: [0]
 
 
 # Where to save the checkpoints
-save_model: joshua_enbn/run/model
+save_model: toy-pmjoshua-enbn/run/model
 save_checkpoint_steps: 500
 keep_checkpoint: 10
 seed: 3435
