--- a/training.yaml
+++ b/training.yaml
@@ -5,17 +5,17 @@ mkdir <whole path of your directory>
 
 ###I am assuming you are training jw corpus, so if you use any other corpus, change the name, and also check the paths before running
 
-save_data: your data dir  ## This should be something like /home/...data/enbn/preprocessed/ 
+save_data: /home/akandimalla/practicum/data/en_hi/preprocessed/vocabulary/IITB 
 
 
 # Corpus opts:
 data:
     train:
-        path_src: /home/...data/enbn/preprocessed/jw.train.bpe.en
-        path_tgt: /home/...data/enbn/preprocessed/jw.train.bpe.bn
+        path_src: /home/akandimalla/practicum/data/en_hi/preprocessed/IITB.en-hi.bpe.en
+        path_tgt: /home/akandimalla/practicum/data/en_hi/preprocessed/IITB.en-hi.bpe.hi
     valid:
-        path_src: /home/...data/enbn/preprocessed/dev.bpe.en
-        path_tgt: /home/...data/enbn/preprocessed/dev.bpe.bn
+        path_src: /home/akandimalla/practicum/data/en_hi/preprocessed/dev.bpe.en
+        path_tgt: /home/akandimalla/practicum/data/en_hi/preprocessed/dev.bpe.hi
 
 subword_nbest: 1
 subword_alpha: 0.0
@@ -29,10 +29,10 @@ skip_empty_level: silent
 
 # # Vocab opts
 # ### vocab:
-src_vocab: /home/...data/enbn/preprocessed/vocab_jw.en
-tgt_vocab: /home/...data/enbn/preprocessed/vocab_jw.bn
-src_vocab_size: ****  ##check the number of words in vocab_jw.en, simple way to run wc -l ~path/vocab_jw.en that will show the number of lines, each line contain one word, so just copy and paste here the number of lines
-tgt_vocab_size: ****  ##check the number of words in vocab_jw.bn, simple way to run wc -l ~path/vocab_jw.bn that will show the number of lines, each line contain one word, so just copy and paste here the number of lines
+src_vocab: /home/akandimalla/practicum/data/en_hi/preprocessed/vocabulary/IITB.vocab.src
+tgt_vocab: /home/akandimalla/practicum/data/en_hi/preprocessed/vocabulary/IITB.vocab.tgt
+#src_vocab_size: ****  ##check the number of words in vocab_jw.en, simple way to run wc -l ~path/vocab_jw.en that will show the number of lines, each line contain one word, so just copy and paste here the number of lines
+#tgt_vocab_size: ****  ##check the number of words in vocab_jw.bn, simple way to run wc -l ~path/vocab_jw.bn that will show the number of lines, each line contain one word, so just copy and paste here the number of lines
 vocab_size_multiple: 8
 src_words_min_frequency: 1
 tgt_words_min_frequency: 1
@@ -40,7 +40,7 @@ tgt_words_min_frequency: 1
 # # Model training parameters
 
 # General opts
-save_model: /home/..../practicum2/models/en--bn/jw_en-to-bn  #/home/..../practicum2/models/en--bn  en--bn stands for language pair, in any directrion
+save_model: /home/akandimalla/practicum/Models/en--hi  #/home/..../practicum2/models/en--bn  en--bn stands for language pair, in any directrion
 keep_checkpoint: 60
 save_checkpoint_steps: 10000
 average_decay: 0.0005
