--- a/IITB-ENHI-1.yaml
+++ b/IITB-ENHI-1.yaml
@@ -1,12 +1,20 @@
 # configuration details
 
-save_data: /home/akandimalla/practicum/data/en_hi/  ###this should be something like /home/...data/en_bn/preprocessed
+save_data: /home/akandimalla/practicum/data/en_hi  ###this should be something like /home/...data/en_bn/preprocessed
 
 # Corpus opts:
 data:
     corpus:
         path_src: /home/akandimalla/practicum/data/en_hi/IITB.en-hi.en  #fill the dots with your path
-        path_tgt: /home/akandimalla/practicum/data/en_hi/IITB.en-hi.en
+        path_tgt: /home/akandimalla/practicum/data/en_hi/IITB.en-hi.hi
+        
+data:
+    corpus_1:
+        path_src: /home/akandimalla/practicum/data/en_hi/IITB.en-hi.en
+        path_tgt: /home/akandimalla/practicum/data/en_hi/IITB.en-hi.hi
+    valid:
+        path_src: /home/akandimalla/practicum/data/en_hi/dev.en
+        path_tgt: /home/akandimalla/practicum/data/en_hi/dev.hi
 
 
 subword_nbest: 1
