--- a/IITB-ENHI-1.yaml
+++ b/IITB-ENHI-1.yaml
@@ -1,86 +1,65 @@
-# configuration details
+# s2_te_en.yaml
 
-save_data: /home/akandimalla/practicum/data/en_hi/IITB-1  ###this should be something like /home/...data/en_bn/preprocessed
+## Where the samples will be written
+save_data: data/run/example
+## Where the vocab(s) will be written
+src_vocab: data/run/example.vocab.src
+tgt_vocab: data/run/example.vocab.tgt
+# Prevent overwriting existing files in the folder
+overwrite: False
 
-# Corpus opts:        
+# Corpus opts:
 data:
     corpus_1:
         path_src: data/en_hi/IITB.en-hi.en
         path_tgt: data/en_hi/IITB.en-hi.hi
     valid:
-        path_src: data/en_hi/dev.en
-        path_tgt: data/en_hi/dev.hi
+        path_src: data/dev.en
+        path_tgt: data/dev.hi
 
+# Vocabulary files that were just created
+src_vocab: data/run/example.vocab.src
+tgt_vocab: data/run/example.vocab.tgt
 
-subword_nbest: 1
-subword_alpha: 0.0
-##### Filter
-src_seq_length: 150
-tgt_seq_length: 150
-##
-### silently ignore empty lines in the data
-skip_empty_level: silent
-
-### # Vocab opts
-### ### vocab:
-src_vocab: data/voc/IITB_en.vocab.src
-tgt_vocab: data/voc/IITB_hi.vocab.tgt
-src_vocab_size: 32000
-tgt_vocab_size: 32000
-vocab_size_multiple: 8
-src_words_min_frequency: 1
-tgt_words_min_frequency: 1
-n_sample: -1
-
-
-# General opts
-save_model: Models/en--hi  #/home/..../practicum2/models/en--bn  en--bn stands for language pair, in any directrion
-keep_checkpoint: 60
-save_checkpoint_steps: 10000
-average_decay: 0.0005
-seed: 1234
-report_every: 100
-train_steps: 150000
-valid_steps: 10000
-
-# Batching
-queue_size: 1024
-bucket_size: 32768
-pool_factor: 8192
+# Train on a single GPU
 world_size: 1
 gpu_ranks: [0]
-batch_type: "tokens"
-batch_size: 3072
-valid_batch_size: 5120
-batch_size_multiple: 1
-max_generator_batches: 0
-accum_count: [2]
-accum_steps: [0]
 
-# Optimization
-model_dtype: "fp32"
-optim: "adam"
-learning_rate: 2.0
-warmup_steps: 6000
-decay_method: "noam"
-adam_beta1: 0.9
-adam_beta2: 0.98
-max_grad_norm: 0
-label_smoothing: 0.1
-param_init: 0
-param_init_glorot: true
-normalization: "tokens"
 
-# Model
-encoder_type: transformer
+# Where to save the checkpoints
+save_model: Models/model
+save_checkpoint_steps: 10000
+keep_checkpoint: 5
+seed: 3435
+train_steps: 50000
+valid_steps: 10000
+warmup_steps: 500
+report_every: 100
+
 decoder_type: transformer
-enc_layers: 6
-dec_layers: 6
-heads: 8
-rnn_size: 512
+encoder_type: transformer
 word_vec_size: 512
+rnn_size: 512
+layers: 6
 transformer_ff: 2048
-dropout_steps: [0]
-dropout: [0.2]
-attention_dropout: [0.1]
-position_encoding: true
+heads: 8
+
+accum_count: 8
+optim: adam
+adam_beta1: 0.9
+adam_beta2: 0.998
+decay_method: noam
+learning_rate: 2.0
+max_grad_norm: 0.0
+
+batch_size: 4096
+batch_type: tokens
+normalization: tokens
+dropout: 0.1
+label_smoothing: 0.1
+
+max_generator_batches: 2
+
+param_init: 0.0
+param_init_glorot: 'true'
+position_encoding: 'true'
