--- a/IITB-ENHI-1.yaml
+++ b/IITB-ENHI-1.yaml
@@ -14,8 +14,8 @@ data:
         path_src: data/en_hi/IITB.en-hi.en
         path_tgt: data/en_hi/IITB.en-hi.hi
     valid:
-        path_src: data/dev.en
-        path_tgt: data/dev.hi
+        path_src: data/en_hi/dev.en
+        path_tgt: data/en_hi/dev.hi
 
 # Vocabulary files that were just created
 src_vocab: data/run/example.vocab.src
